--- a/hidden/index.html
+++ b/hidden/index.html
@@ -9,10 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/assets/main-u7JCcmYW.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-BNtd9HLH.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="hidden">You found the hidden page!</div>
   </body>
 </html>
