--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
     />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZ0MB6LTN5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GZ0MB6LTN5');
+  </script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
