--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <script type="module" crossorigin src="/assets/main-u7JCcmYW.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-BNtd9HLH.css">
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZ0MB6LTN5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GZ0MB6LTN5');
+  </script>
   <body>
     <div id="app"></div>
   </body>
